--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>llama</title>
 </head>
 <body>
-    <h1>llama1</h1>
+    <h1>llama!</h1>
+    <p>llama llama duck-- it's a song look it up!</p>
 </body>
 </html>
